# sps-template-server/model/request/common.go
@@ -1,3 +1,14 @@
 package request
 
+// Paging common input parameter structure
+type PageInfo struct {
+	Page     int `json:"page" form:"page"`
+	PageSize int `json:"pageSize" form:"pageSize"`
+}
+
+// Find by id structure
+type GetById struct {
+	Id float64 `json:"id" form:"id"`
+}
+
 type Empty struct {}
